[gd_scene load_steps=4 format=3 uid="uid://cuxw77oj0tuhm"]

[ext_resource type="Script" path="res://scripts/ui/TemptationModal.gd" id="1_dj8aq"]
[ext_resource type="Script" uid="uid://cq0s0t044dnhr" path="res://scripts/ui/UI.gd" id="1_ro3t7"]
[ext_resource type="Script" path="res://scripts/gameplay/TemptationSpawner.gd" id="3_5en4g"]

[node name="Ui" type="CanvasLayer"]
layer = 50
script = ExtResource("1_ro3t7")

[node name="TemptationModal" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 888.0
offset_top = 1.0
offset_right = 1153.0
offset_bottom = 50.0
script = ExtResource("1_dj8aq")

[node name="TemptationSpawner" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 93.0
offset_right = 40.0
offset_bottom = 133.0
script = ExtResource("3_5en4g")
modal_path = NodePath("../TemptationModal")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 21.0
offset_top = 8.0
offset_right = 61.0
offset_bottom = 48.0
scale = Vector2(11.9746, 3.64626)
color = Color(0, 0, 0, 0.295)

[node name="MainContainer" type="VBoxContainer" parent="."]
offset_left = 35.0
offset_top = 15.0
offset_right = 404.0
offset_bottom = 150.0

[node name="TopBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="HealthSection" type="VBoxContainer" parent="MainContainer/TopBar"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MainContainer/TopBar/HealthSection"]
layout_mode = 2
text = "HEALTH"

[node name="HealthBar" type="ProgressBar" parent="MainContainer/TopBar/HealthSection"]
layout_mode = 2

[node name="HealthHearts" type="HBoxContainer" parent="MainContainer/TopBar/HealthSection"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MainContainer/TopBar"]
layout_mode = 2

[node name="RiskSection" type="VBoxContainer" parent="MainContainer/TopBar"]
layout_mode = 2

[node name="RiskLabel" type="Label" parent="MainContainer/TopBar/RiskSection"]
layout_mode = 2
text = "RISK TIER"

[node name="RiskBar" type="ProgressBar" parent="MainContainer/TopBar/RiskSection"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="MainContainer/TopBar"]
layout_mode = 2

[node name="CoinSection" type="VBoxContainer" parent="MainContainer/TopBar"]
layout_mode = 2

[node name="BankedCoins" type="Label" parent="MainContainer/TopBar/CoinSection"]
layout_mode = 2
text = "Banked: 0"

[node name="UnbankedCoins" type="Label" parent="MainContainer/TopBar/CoinSection"]
layout_mode = 2
text = "At-Risk: 0"

[node name="Multiplier" type="Label" parent="MainContainer/TopBar/CoinSection"]
layout_mode = 2
text = "BM x1.0"

[node name="Spacer3" type="Control" parent="MainContainer/TopBar"]
layout_mode = 2

[node name="StatusSection" type="VBoxContainer" parent="MainContainer/TopBar"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MainContainer/TopBar/StatusSection"]
layout_mode = 2
text = "Status"

[node name="StatusText" type="Label" parent="MainContainer/TopBar/StatusSection"]
layout_mode = 2
text = "Normal"

[node name="GameArea" type="Control" parent="MainContainer"]
layout_mode = 2

[node name="BottomBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="ControlSection" type="VBoxContainer" parent="MainContainer/BottomBar"]
layout_mode = 2

[node name="ControlsHelp" type="Label" parent="MainContainer/BottomBar/ControlSection"]
layout_mode = 2
text = "WASD: Move | Space: Dash | E: Cashout"
